hphp/hack/test/typecheck/sealed/interface.php.exp
File "interface.php", line 8, characters 11-11:
You cannot extend sealed interface A (Typing[4238])
File "interface.php", line 5, characters 11-11:
Declaration is here
