hphp/hack/test/typecheck/sealed/interface.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

<<__Sealed(B::class)>>
interface A {}

interface B extends A {}
interface C extends A {}
